--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
 # TODO: Update with exact module version
 numpy
-torch>=1.7
+# torch>=1.7 (conda install pytorch torchvision torchaudio pytorch-cuda=11.7 -c pytorch -c nvidia)
+tensorboard    
 opencv_python
 loguru
 tqdm
-torchvision
+# torchvision
 thop
 ninja
 tabulate
 psutil
-tensorboard
 
 # verified versions
 # pycocotools corresponds to https://github.com/ppwwyyxx/cocoapi
 pycocotools>=2.0.2
-onnx>=1.13.0
-onnx-simplifier==0.4.10
+# onnx==1.8.1
+# onnxruntime==1.8.0
+# onnx-simplifier==0.4.1
